--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_NAVER_CLIENT_ID=m0Jt3H9zbL3_Ezc16esb
 REACT_APP_NAVER_CLIENT_SECRET=MtZjWrMNIs
-REACT_APP_NAVER_REDIRECT_URI=http://localhost:3000/auth/naver/callback 
+REACT_APP_NAVER_REDIRECT_URI=http://localhost:3000/auth/naver/callback
+REACT_APP_OPENWEATHER_API_KEY=aa3d847d0a3833601e2ba4978af80d3e 
